Add RSS support to search ENTRYSTORE-674